Fix: some wrap

--- a/luna/styles/globals.css
+++ b/luna/styles/globals.css
@@ -19,4 +19,5 @@ body {
 .shiki {
   padding: 24px;
   margin-bottom: 0;
+  overflow: scroll;
 }
